<resources>
    <string name="app_name">medEye</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="logo">Logo</string>
    <string name="slogan">Keeping a watchful eye on your health</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>

    <string name="welcome">Welcome Back</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="signupRedirect">Sign up here</string>

    <string name="passworddoublecheck">Confirm Password</string>
    <string name="start">Get Started</string>

</resources>